[gd_scene format=3 uid="uid://d4bwde7tln134"]

[ext_resource type="Script" uid="uid://s44vrlhr78tw" path="res://scenes/inventory_scenes/hover_info.gd" id="1_vfyv8"]
[ext_resource type="Theme" uid="uid://b6t8eigy6o4ce" path="res://graphics/themes/medium.tres" id="2_707rc"]
[ext_resource type="Theme" uid="uid://bmb6alj3b355v" path="res://graphics/themes/small.tres" id="3_dpvl3"]

[node name="HoverInfo" type="Control" unique_id=1270979663]
custom_minimum_size = Vector2(100, 150)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1180.0
offset_bottom = -570.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_vfyv8")

[node name="BackgroundBorder" type="ColorRect" parent="." unique_id=1528212108]
custom_minimum_size = Vector2(100, 150)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.133941, 0.0860002, 0.0208671, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=658001041]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="RichTextLabel" parent="VBoxContainer" unique_id=1149393667]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
mouse_filter = 2
theme = ExtResource("2_707rc")
bbcode_enabled = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="Container" type="Control" parent="VBoxContainer" unique_id=1313491840]
layout_mode = 2
size_flags_vertical = 3

[node name="Background" type="ColorRect" parent="VBoxContainer/Container" unique_id=1112160810]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.334271, 0.214775, 0.102991, 1)

[node name="TextLabel" type="Label" parent="VBoxContainer/Container" unique_id=2093485405]
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_707rc")

[node name="FlavourLabel" type="RichTextLabel" parent="VBoxContainer" unique_id=263555064]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
mouse_filter = 2
theme = ExtResource("3_dpvl3")
bbcode_enabled = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1
